Play with text and i18next

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,5 +4,6 @@
   "System_003": "You might find some interesting activity and meet new people!",
   "System_004": "Press arrow keys to walk.",
   "System_005": "Press space bar to interact, read, talk.",
-  "System_006": "Enjoy!"
+  "System_006": "Enjoy!",
+  "Inn": "AvaBar\nGrog, Nuka Coke, Pißwater and much more!\nCome in, we're open!"
 }
