--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -4,5 +4,6 @@
   "System_003": "Potresti trovare qualche attività interessante da fare e conoscere nuove persone!",
   "System_004": "Premi i tasti freccia per camminare.",
   "System_005": "Premi spazio per interagire, leggere e parlare.",
-  "System_006": "Divertiti!"
+  "System_006": "Divertiti!",
+  "Inn": "AvaBar\nGrog, Nuka Cola, Birra Pißner e molto altro.\nSiamo aperti!"
 }
