Implement level 'a night out'

--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -192,8 +192,8 @@
       "Mario_night006": "Here we are!",
       "Gioia_night002": "Wait, what? The park?",
       "Mario_night007": "Sure, why not?",
-      "Gioia_night003": "Because it's closed at night!",
-      "Mario_night008": "So what? What can they do to us? There is no one around. And even if they see us, we can just disappear before they'll find out who we are!",
+      "Gioia_night003": "Because it's pitch dark at night!",
+      "Mario_night008": "So what? What can they do to us? There is no one around. And even if there were, if it's that dark no one will see us!",
       "Gioia_night004": "It just feels... you know...",
       "Mario_night009": "Come on. Let yourself go. I have everything set up. Trust me.",
       "Gioia_night005": "Oh well. YOLO.",
@@ -204,9 +204,9 @@
       "Gioia_night007": "It feels so close... It reminds me of an old Italian song...",
       "Mario_night013": "The World We Love In...",
       "Gioia_night008": "The World We Love In...",
-      "Mario_night014": "Stars falling, flowers bloom...",
-      "Gioia_night009": "When we share this world we love in...",
-      "Mario_night015": "It's such a world apart, this dreamy world we love in...",
+      "Mario_night014": "♪ Stars falling, flowers bloom... ♪",
+      "Gioia_night009": "♪ When we share this world we love in... ♪",
+      "Mario_night015": "♪ It's such a world apart, this dreamy world we love in... ♪",
       "Gioia_night010": "No one ever did something similar for me...",
       "Gioia_night011": "I wish this night would never end.",
       "Mario_night016": "Why do we have to go back to our duties? Can't we just stay here forever?",
@@ -734,8 +734,8 @@
       "Mario_night006": "Eccoci qui!",
       "Gioia_night002": "Aspetta, cosa? Il parco?",
       "Mario_night007": "Certo, perché no?",
-      "Gioia_night003": "Perché è chiuso di notte!",
-      "Mario_night008": "E allora? Cosa possono farci? Non c'è nessuno nei dintorni. E anche se ci vedessero, potremmo sparire in un istante prima ancora che ci riconoscano!",
+      "Gioia_night003": "Perché non si vede nulla di notte!",
+      "Mario_night008": "E allora? Cosa può succedere? Non c'è nessuno nei dintorni. E se anche ci fosse qualcuno, se è buio pesto nessuno si accorgerà di noi!",
       "Gioia_night004": "È che sembra... sai...",
       "Mario_night009": "Dai, lasciati andare. Ho preparato tutto. Fidati.",
       "Gioia_night005": "E va bene. YOLO.",
@@ -746,9 +746,9 @@
       "Gioia_night007": "Sembra così vicino... Mi ricorda di quella vecchia canzone...",
       "Mario_night013": "Il cielo in una stanza...",
       "Gioia_night008": "Il cielo in una stanza...",
-      "Mario_night014": "Quando sei qui con me...",
-      "Gioia_night009": "Questa stanza non ha più pareti, ma alberi...",
-      "Mario_night015": "Io vedo il cielo sopra noi, che restiamo qui, abbandonati...",
+      "Mario_night014": "♪ Quando sei qui con me... ♪",
+      "Gioia_night009": "♪ Questa stanza non ha più pareti, ma alberi... ♪",
+      "Mario_night015": "♪ Io vedo il cielo sopra noi, che restiamo qui, abbandonati... ♪",
       "Gioia_night010": "Nessuno aveva mai fatto nulla di simile per me...",
       "Gioia_night011": "Vorrei che questa notte non finisse mai.",
       "Mario_night016": "Perché dobbiamo tornare alle nostre attività domani? Non possiamo semplicemente restare qui per sempre?",
