--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -121,10 +121,10 @@
       "System_007": "The next morning",
       "Mario_bar008": "...and that's when the quokka threw at me one of his babies, which are called joeys, to flee for her life...",
       "Mario_bar009": "Oh my god it is so late! I kept you up all night! Does this bar ever close?",
-      "Gioia_bar014.1": "Not that I know of... Every time I pass by it is open. Damn, you did so many things in your life! I want to know more, you're so interesting! Why don't we go out for dinner next time?",
+      "Gioia_bar014_1": "Not that I know of... Every time I pass by it is open. Damn, you did so many things in your life! I want to know more, you're so interesting! Why don't we go out for dinner next time?",
       "Mario_bar010": "Hey, you sure don't have time to loose... Sure, whenever you want.",
       "Gioia_bar015": "Great. There's a nice restaurant not far from my place.",
-      "Gioia_bar015.1": "I won't be around in the next couple of days. Show up to my place in three days, around 6PM and I'll walk you there.",
+      "Gioia_bar015_1": "I won't be around in the next couple of days. Show up to my place in three days, around 6PM and I'll walk you there.",
       "Gioia_bar016": "If you cannot find me just wait for me. I'll eventually show up.",
       "Mario_bar011": "Deal. I'll be there. What about the food?",
       "Gioia_bar017": "I think I will have some Dim sum, but if you are not a fan of Asian food feel free to have whatever you want, you don't have to eat what I'll eat!",
@@ -145,13 +145,13 @@
       "Mario_dinner011": "[i]I can do this. Let's go.[/i]",
       "Mario_far": "[i]Have I forgotten where her place is?[/i]",
       "Mario_delay1": "[i]I don't want her to be waiting for me. [/i]",
-      "Mario_dinner011.1": "[i]I knew that. She won't come. I shouldn't have come.[/i]",
+      "Mario_dinner011_1": "[i]I knew that. She won't come. I shouldn't have come.[/i]",
       "Gioia_dinner001": "Why hello! I though you had forgotten! I'll be right there, it's almost dinner time!",
       "Gioia_dinner002": "Have you decided what you will eat?",
       "Mario_dinner012": "Yeah, lately I have been craving for some risotto. Tonight will be the night.",
       "Gioia_dinner003": "Great choice! I am ready, let's move!",
       "Gioia_dinner004": "Mmm this Dim sum is delicious. It's been a while since the last time I got one. How is your risotto?",
-      "Mario_dinner012.1": "Not bad at all. I had tasted better, but I cannot complain. Do you want to try?",
+      "Mario_dinner012_1": "Not bad at all. I had tasted better, but I cannot complain. Do you want to try?",
       "Gioia_dinner005": "Haha. No thanks, I think I'll pass. But thanks for asking...",
       "Mario_dinner013": "Do you come here often?",
       "Gioia_dinner006": "Nah, I got here a couple of time when I started getting around here, but then I didn't have anyone to go with.",
@@ -256,7 +256,7 @@
       "Mario_anniversary003": "All good on my side. Anyway it is just an impression. You see the snow, you think it is cold. Just don't focus on it...",
       "Gioia_anniversary002": "Yeah, I always keep forgetting that perceptions can be altered with some mind effort...",
       "Gioia_anniversary003": "Could you believe? This time last year it was early spring and we could spend the night in the park watching the stars...",
-      "Mario_anniversary003.1": "Yeah, crazy times. Someone must be messing up with the seasons... Hey, up there! Enough with this snow, alright?",
+      "Mario_anniversary003_1": "Yeah, crazy times. Someone must be messing up with the seasons... Hey, up there! Enough with this snow, alright?",
       "Gioia_anniversary004": "Hey, no one is going to listen to you!",
       "Mario_anniversary004": "Did you already have breakfast?",
       "Gioia_anniversary005": "Yeah, I was in such a rush, you kept me up until late yesterday... I am still sleepy!",
@@ -286,7 +286,7 @@
       "Mario_anniversary020": "[i]Especially since I don't feel cold at all![/i]",
       "Mario_anniversary021": "Hooooneeeeyyy!!! Are you late as always?",
       "Mario_anniversary022": "[i]Of course she is.[/i]",
-      "Gioia_anniversary007.1": "No, I am here! Just wait a minute, I am almost ready!",
+      "Gioia_anniversary007_1": "No, I am here! Just wait a minute, I am almost ready!",
       "Mario_anniversary023": "Come on, it's late! I'll wait for you at our table, before someone else will steal it!",
       "Gioia_anniversary008": "OK! Sorry, I'll be there soonish! Don't start eating before I get there!",
       "Mario_anniversary024_bar": "[i]This is not the restaurant... We might get here later...[/i]",
@@ -298,7 +298,7 @@
       "Gioia_anniversary010": "Oh no, thanks, I will be fine. Hey, it's late already, why don't we eat?",
       "Mario_anniversary029": "Sure. I am going to enjoy some deliciously homemade sushi tonight! What about you?",
       "Gioia_anniversary011": "Wow, that's tempting! But I've been wanting to get some pizza, lately, I will get sushi another day. Let me know if it good as I think it is!",
-      "Mario_anniversary029.1": "So, before eating...",
+      "Mario_anniversary029_1": "So, before eating...",
       "Gioia_anniversary012": "Yes...",
       "Mario_anniversary030": "Should we make a toast?",
       "Gioia_anniversary013": "Aren't we here on purpose?",
@@ -352,7 +352,7 @@
       "Mario_marry010": "I will do my best to convince you. Trust me.",
       "Gioia_marry007": "You always manage to persuade me...",
       "Mario_marry011": "I always get what I want!",
-      "Gioia_marry007.1": "I am exhausted. I need some good sleep. It's been a tough day, and this dinner has been intense. I need some proper rest. Thanks for the company, I enjoyed the evening. I'd better go now.",
+      "Gioia_marry007_1": "I am exhausted. I need some good sleep. It's been a tough day, and this dinner has been intense. I need some proper rest. Thanks for the company, I enjoyed the evening. I'd better go now.",
       "Mario_marry012": "Hey. We made it till now. We can take this further, if we both want it...",
       "Mario_marry013": "I'll be in the park tomorrow afternoon. Will you meet me there?",
       "Gioia_marry008": "Yeah. Not before 6PM. I won't make it home before that time.",
@@ -408,10 +408,10 @@
       "Mario_moving020": "And the rooftop is your favorite color!",
       "Gioia_moving008": "And the rooftop is my favorite color. Damn, I can't believe it.",
       "Mario_moving021": "So? Is this a yes? I am so excited! We can move in in a blink of an eye!",
-      "Gioia_moving006.1": "Oh my god, am I really doing this? Are we? Oh gosh, I can't wait to see how it looks like on the inside! Can I enter? Can I?",
+      "Gioia_moving006_1": "Oh my god, am I really doing this? Are we? Oh gosh, I can't wait to see how it looks like on the inside! Can I enter? Can I?",
       "Mario_moving022": "Help yourself, lady!",
-      "Gioia_moving007.1": "OH MY GOD!!!",
-      "Gioia_moving008.1": "LOOK AT THESE STAIRS!",
+      "Gioia_moving007_1": "OH MY GOD!!!",
+      "Gioia_moving008_1": "LOOK AT THESE STAIRS!",
       "Gioia_moving009": "OMG THE CINEMA ROOM!",
       "Gioia_moving010": "THE SOFA IS LILAC!!!",
       "Mario_moving023": "I guess this is a yes...",
@@ -647,10 +647,10 @@
       "System_007": "La mattina seguente",
       "Mario_bar008": "...ed è cosi che quella quokka mi ha lanciato uno dei suoi cuccioli - che sono detti \"Joey\" - per sfuggire da me...",
       "Mario_bar009": "Oh cielo, è tardissimo, ti ho tenuta sveglia tutta la notte! Ma questo bar non chiude mai?",
-      "Gioia_bar014.1": "Non che io sappia... Ogni volta che ci passo davanti è aperto. Diavolo, hai fatto così tante cose nella tua vita! Ne voglio sapere di più, è troppo interessante! Perché non ci vediamo per cena la prossima volta?",
+      "Gioia_bar014_1": "Non che io sappia... Ogni volta che ci passo davanti è aperto. Diavolo, hai fatto così tante cose nella tua vita! Ne voglio sapere di più, è troppo interessante! Perché non ci vediamo per cena la prossima volta?",
       "Mario_bar010": "Ehi, di sicuro non perdi tempo, eh? Certo, quando preferisci.",
       "Gioia_bar015": "Ottimo. C'è un ristorante carino non distante da dove sto io.",
-      "Gioia_bar015.1": "Non sarò nei paraggi nei prossimi due giorni. Fatti trovare da me fra tre giorni, verso le 18:00 e ti ci porto.",
+      "Gioia_bar015_1": "Non sarò nei paraggi nei prossimi due giorni. Fatti trovare da me fra tre giorni, verso le 18:00 e ti ci porto.",
       "Gioia_bar016": "Se non ci sono ancora aspettami. Prima o poi arrivo.",
       "Mario_bar011": "Affare fatto. Idee sul tipo di cibo?",
       "Gioia_bar017": "Credo che mangerò del Dim sum. Ma se non sei incline al cibo asiatico mangia pure quello che vuoi, non devi per forza mangiare quello che prendo io!",
@@ -671,13 +671,13 @@
       "Mario_dinner011": "[i]Posso farcela. Andiamo.[/i]",
       "Mario_far": "[i]Ho per caso dimenticato dove trovarla?[/i]",
       "Mario_delay1": "[i]Non voglio che stia ad aspettarmi.[/i]",
-      "Mario_dinner011.1": "[i]Lo sapevo. Non verrà. Non sarei dovuto venire.[/i]",
+      "Mario_dinner011_1": "[i]Lo sapevo. Non verrà. Non sarei dovuto venire.[/i]",
       "Gioia_dinner001": "Ma ciao! Pensavo ti fossi dimenticato! Arrivo subito, è quasi ora di cena!",
       "Gioia_dinner002": "Hai deciso cosa mangerai?",
       "Mario_dinner012": "Sì, ultimamente ho avuto un sacco voglia di risotto, e stasera è la serata giusta per mangiarne.",
       "Gioia_dinner003": "Ottima scelta. Sono pronta, andiamo!",
       "Gioia_dinner004": "Mmm, questo Dim sum è delizioso. Era da un bel po' che non ne mangiavo. Com'è il tuo risotto?",
-      "Mario_dinner012.1": "Non male. Ne ho mangiati di migliori, ma non mi posso lamentare. Vuoi provarlo?",
+      "Mario_dinner012_1": "Non male. Ne ho mangiati di migliori, ma non mi posso lamentare. Vuoi provarlo?",
       "Gioia_dinner005": "Ahah. No grazie. Passo. Ma grazie per aver chiesto...",
       "Mario_dinner013": "Vieni spesso qui?",
       "Gioia_dinner006": "No, ci sono stata un paio di volte quando ho iniziato a girare da queste parti, ma poi non c'era mai nessuno con cui venirci.",
@@ -782,7 +782,7 @@
       "Mario_anniversary003": "Tutto bene. E comunque è solo un'impressione. Vedi la neve, pensi che faccia freddo. Non ti ci focalizzare...",
       "Gioia_anniversary002": "Vero. Mi dimentico sempre di quanto le percezioni possano essere alterate con un po' di sforzo mentale...",
       "Gioia_anniversary003": "Riesci a crederci? L'altr'anno a quest'ora c'era un clima primaverile e stavamo nel parco a guardare le stelle...",
-      "Mario_anniversary003.1": "Già. Che follia. Qualcuno deve star incasinando le stagioni... Ehi, lassù! Basta neve, OK?",
+      "Mario_anniversary003_1": "Già. Che follia. Qualcuno deve star incasinando le stagioni... Ehi, lassù! Basta neve, OK?",
       "Gioia_anniversary004": "Ehi, guarda che non ti si fila nessuno!",
       "Mario_anniversary004": "Hai già fatto colazione?",
       "Gioia_anniversary005": "Sì, ero di frettissima, mi hai tenuto sveglia fino a stratardi, ieri... Sono ancora assonnatissima!",
@@ -812,7 +812,7 @@
       "Mario_anniversary020": "[i]Specialmente perché non sento affatto freddo![/i]",
       "Mario_anniversary021": "Tesooooorooooo!!! Sei in ritardo come al solito?",
       "Mario_anniversary022": "[i]Ovvio che sì.[/i]",
-      "Gioia_anniversary007.1": "No, sono qui! Aspetta un minuto, sono quasi pronta!",
+      "Gioia_anniversary007_1": "No, sono qui! Aspetta un minuto, sono quasi pronta!",
       "Mario_anniversary023": "Dai, è tardi! Ti aspetto al nostro tavolo, prima che qualcuno ce lo freghi!",
       "Gioia_anniversary008": "OK! Scusa, arrivo in un attimo! Non cominciare a mangiare senza di me!",
       "Mario_anniversary024_bar": "[i]Questo non è il ristorante... Magari possiamo fare un salto qui dopo...[/i]",
@@ -824,7 +824,7 @@
       "Gioia_anniversary010": "Oh, no, grazie, andrà tutto liscio. Ehi, è già tardi! Perché non mangiamo?",
       "Mario_anniversary029": "Ma certo. Io stasera mi sparo dell'ottimo sushi artigianale! E tu?",
       "Gioia_anniversary011": "Uh, mi tenti! Ma è un po' che ho voglia di pizza, il sushi aspetterà. Fammi sapere se è buono come penso che sia!",
-      "Mario_anniversary029.1": "Allora, prima di iniziare...",
+      "Mario_anniversary029_1": "Allora, prima di iniziare...",
       "Gioia_anniversary012": "Sì...",
       "Mario_anniversary030": "Non dovremmo fare un brindisi?",
       "Gioia_anniversary013": "Non siamo qui apposta?",
@@ -878,7 +878,7 @@
       "Mario_marry010": "Farò del mio meglio per convincerti.",
       "Gioia_marry007": "Riesci sempre a convincermi...",
       "Mario_marry011": "Ottengo sempre quello che voglio!",
-      "Gioia_marry007.1": "Sono esausta. Ho bisogno di riposare. È stata una giornata infernale, e questa cena è stata... intensa. Devo dormire. Grazie per la compagnia, mi è piaciuta questa serata. Ma ora devo andare.",
+      "Gioia_marry007_1": "Sono esausta. Ho bisogno di riposare. È stata una giornata infernale, e questa cena è stata... intensa. Devo dormire. Grazie per la compagnia, mi è piaciuta questa serata. Ma ora devo andare.",
       "Mario_marry012": "Ehi. Ce l'abbiamo fatta fino a qui. Possiamo andare oltre, se lo vogliamo entrambi.",
       "Mario_marry013": "Sarò nel parco, domani pomeriggio. Mi raggiungi?",
       "Gioia_marry008": "Sì. Non prima delle 18:00. Non sarò a casa prima di allora.",
@@ -934,10 +934,10 @@
       "Mario_moving020": "E il tetto è del tuo colore preferito!",
       "Gioia_moving008": "E il tetto è del mio colore preferito. Maledetto, non riesco a crederci.",
       "Mario_moving021": "Quindi? È un sì? Sono elettrizzato! Possiamo spostarci in un batter d'occhio!",
-      "Gioia_moving006.1": "Oh cielo, lo sto davvero facendo? Lo stiamo facendo? Oh signore, non vedo l'ora di vedere com'è all'interno! Posso entrare? Posso?",
+      "Gioia_moving006_1": "Oh cielo, lo sto davvero facendo? Lo stiamo facendo? Oh signore, non vedo l'ora di vedere com'è all'interno! Posso entrare? Posso?",
       "Mario_moving022": "Prego, si accomodi!",
-      "Gioia_moving007.1": "OH MIO DIO!!!",
-      "Gioia_moving008.1": "GUARDA CHE SCALE!!!",
+      "Gioia_moving007_1": "OH MIO DIO!!!",
+      "Gioia_moving008_1": "GUARDA CHE SCALE!!!",
       "Gioia_moving009": "OMMIODDIO LA SALA CINEMA!",
       "Gioia_moving010": "IL DIVANO È LILLAAAAHHH!!!",
       "Mario_moving023": "Immagino che sia un sì...",
