Update language resource

--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -502,6 +502,7 @@
       "Gioia_bday_002": "Hey... thanks for this party. The garden is amazing.",
       "Mario_bday_010": "I am sorry about yesterday, I really am. Are you still mad at me?",
       "Gioia_bday_003": "It's OK. I'll just- hey! Why hello! What is this?",
+      "npc_bday_cat": "MEOW!",
       "Mario_bday_011": "Oh, well, that's your present... I know you wanted a dog, but well... This one weighs less, performs better...",
       "Gioia_bday_004": "Hello cutie! Sooo nice!",
       "npc_bday_004": "So! How many this year? You're getting old, aren't you?",
@@ -522,7 +523,24 @@
       "Gioia_bday_016": "Thank you so much guys. See you around, don't be a stranger!",
       "Mario_bday_013": "Mael, please don't! Stay! Don't go!",
       "Mario_bday_014": "No, Mael, don't!",
-      "System_027": "[color=red]User: Mael got disconnected.[/color]"
+      "System_027": "[color=red]User: Mael got disconnected.[/color]",
+      "Mario_night001": "[i]So, time to plan my next move. I will impress her. Where should I take her tonight?[/i]",
+      "Mario_night_townhall": "[i]Sure, this is a nice garden, but I don't think it's the safest place around...[/i]",
+      "Mario_night_houseforsale": "[i]Oh yeah, this would be a great idea. But I cannot be sure there are no surveillance cameras... Too risky[/i]",
+      "Mario_night_bar": "[i]Again? What is so impressive about this? She already know this place.[/i]",
+      "Mario_night_restaurant": "[i]I don't want to risk again. I want to set up something so amazing that even if she receives another phone call se won't be willing to take it![/i]",
+      "Mario_night_centralsquare": "[i]Isn't this place a bit too much... in full sight?[/i]",
+      "Mario_night_woods": "[i]Oh, come on, she'll think I am a maniac![/i]",
+      "Mario_night_park": "[i]Now we're talking! I'll bring her here. It's a great place to watch the stars. And I am sure there won't be any clouds tonight. Hehe.[/i]",
+      "Mario_night002": "[i]And now, plenty of time to set everything up. Not a single thing will be left to chance.[/i]",
+      "Mario_night003": "I was waiting for you. Where have you been?",
+      "Gioia_night001": "Oh, you know. Usual stuff. Boring stuff. Not worth mentioning. Let's not waste time, what are we up to?",
+      "Mario_night004": "Did you bring a jacket? It's going to get chilly!",
+      "Mario_night005": "I'm just joking, don't worry. It's not far from here. Let's go.",
+      "Mario_other_building": "[i]Hey, this wasn't what I planned.[/i]",
+      "Mario_hurry": "[i]Better hurry, or she'll get annoyed...[/i]",
+      "Mario_night006": "Here we are!",
+      "Gioia_night002": "Wait, what? The park?"
     }
   },
   "it": {
@@ -575,13 +593,13 @@
       "Mario_partynight_012": "Hai ragione. Alla prossima, allora. Ci becchiamo in giro... 'Notte!",
       "Town_hall_postparty": "Municipio\nPesca di beneficienza ogni domenica - Informazioni all'interno[/b]",
       "Mario_first_date001": "[i]Bene, vediamo chi c'è in giro oggi. Andiamo a fare due passi.[/i]",
-      "Mario_first_date002": "[i]Chissà se la becco da qualche parte. Magari neanche gira da queste parti abitualmente...[/i]",
+      "Mario_first_date002": "[i]Chissà se la becco nei dintorni. Magari neanche gira da queste parti abitualmente...[/i]",
       "Mario_first_date003": "[i]Magari è passata solo ieri per la festa.[/i]",
       "Mario_first_date004": "[i]Voglio davvero vedere se riesco a trovarla...[/i]",
       "Mario_first_date005": "Oh, eccoti! Non ero sicuro di trovarti!",
       "Gioia_first_date001": "Ma ciao! Che piacere vederti! E così sei ancora nei dintorni! Questo è il mio posticino, ti piace?",
       "Gioia_first_date002": "E tu dov'è che stai?",
-      "Mario_first_date006": "Davvero una bella casetta! Io invece mi sono sistemato in una casetta vicino ai boschi, a nord ovest del centro città.",
+      "Mario_first_date006": "Davvero niente male! Io invece mi sono sistemato in una casetta vicino ai boschi, a nord ovest del centro città.",
       "Gioia_first_date003": "Bene! Mi piacerebbe vederla!",
       "Mario_first_date007": "Oh, beh, non è niente di che, la sto ancora sistemando, al momento è davvero una versione base...",
       "Gioia_first_date004": "Ma va, sono sicura che sia un bel posticino!",
@@ -632,7 +650,7 @@
       "Mario_bar005A1": "Mi intriga poter sbirciare nella vita di altre creature, studiare i loro comportamenti, e poterlo fare restando completamente in solitudine.",
       "Mario_bar005B1": "Ti permettono di divertirti anche se sei da solo. E se giochi con altre persone puoi far finta di non essere più solo anche se le altre persone non sono fisicamente vicine.",
       "Mario_bar005C1": "Mi piace l'idea di poter decidere della vita e degli eventi di altre creature.",
-      "Gioia_bar005A1": "Oh, davvero?! Io guardo dozzine di documentari sugli uccelli! Avevo anche iniziato un corso di biologia a poi non sono riuscita a terminare gli studi... Posso suggerirti un sacco di film grandiosi a riguardo!",
+      "Gioia_bar005A1": "Oh, davvero?! Io guardo dozzine di documentari sugli uccelli! Avevo anche iniziato un corso di biologia, ma poi non sono riuscita a terminare gli studi... Posso suggerirti un sacco di film grandiosi a riguardo!",
       "Gioia_bar005A2": "Non mi dire! Anche io sono una nerd! Dovremmo organizzare una sfida prima o poi! Io sto a ruota con GDR e sparatutto, sono imbattibile! Ma con i giochi di ritmo sono una pippa!",
       "Gioia_bar005A3": "Oh mio dio, è TROPPO interessante! Anche io scrivevo un sacco, ma ultimamente non ho quasi più tempo... Ti andrebbe di mostrarmi qualcuno dei tuoi lavori? Muoio dalla curiosità! Magari potrei condividere con te un blog che tenevo anni fa...",
       "Mario_bar006": "Oh, ma ti prego! Quante possibilità c'erano? Certo, con piacere! E ora mi stupiresti oltre ogni ragionevole possibilità se mi dicessi che sei anche appassionata di...",
@@ -650,7 +668,7 @@
       "Gioia_bar014_1": "Non che io sappia... Ogni volta che ci passo davanti è aperto. Diavolo, hai fatto così tante cose nella tua vita! Ne voglio sapere di più, è troppo interessante! Perché non ci vediamo per cena la prossima volta?",
       "Mario_bar010": "Ehi, di sicuro non perdi tempo, eh? Certo, quando preferisci.",
       "Gioia_bar015": "Ottimo. C'è un ristorante carino non distante da dove sto io.",
-      "Gioia_bar015_1": "Non sarò nei paraggi nei prossimi due giorni. Fatti trovare da me fra tre giorni, verso le 18:00 e ti ci porto.",
+      "Gioia_bar015_1": "Non sarò nei paraggi nei prossimi due giorni. Fatti trovare da me fra tre giorni, verso le 18:00, e ti ci porto.",
       "Gioia_bar016": "Se non ci sono ancora aspettami. Prima o poi arrivo.",
       "Mario_bar011": "Affare fatto. Idee sul tipo di cibo?",
       "Gioia_bar017": "Credo che mangerò del Dim sum. Ma se non sei incline al cibo asiatico mangia pure quello che vuoi, non devi per forza mangiare quello che prendo io!",
@@ -721,10 +739,10 @@
       "Mario_night016": "Perché dobbiamo tornare alle nostre attività domani? Non possiamo semplicemente restare qui per sempre?",
       "Gioia_night012": "Lo vorrei tanto.",
       "Mario_whatweare001": "[i]E buongiornissimo a me. Cacchio, ho sprecato quasi tutto il giorno. Non che sia riuscito a dormire molto, ultimamente.[/i]",
-      "Mario_whatweare002": "[i]OK, mi sembra ovvio che se prima non fossi molto sicuro se restare o meno, ora ho la mia risposta.[/i]",
+      "Mario_whatweare002": "[i]OK, se anche prima non ero molto sicuro se restare o meno, ora direi proprio che ho la mia risposta.[/i]",
       "Mario_whatweare003": "[i]Stanotte mi sono sentito più vivo di quanto mi ci sia mai sentito nell'ultimo anno.[/i]",
       "Mario_whatweare004": "[i]E sono sicuro che sia lo stesso anche per lei.[/i]",
-      "Mario_whatweare005": "[i]E sono anche così stupido che non le ho detto nulla.[/i]",
+      "Mario_whatweare005": "[i]E sono anche così stupido che non le ho detto nulla di come mi sento.[/i]",
       "Mario_whatweare006": "[i]Farò il primo passo. È la mia occasione.[/i]",
       "Mario_whatweare007": "[i]Dovrei davvero andare a cercarla.[/i]",
       "Mario_whatweare008": "[i]Mi chiedo se sia già sveglia.[/i]",
@@ -752,7 +770,7 @@
       "System_014": "Un paio di ore dopo...",
       "Gioia_whatweare001": "Ciao! Cosa fai qui?",
       "Mario_whatweare022": "Ehi. Ti stavo aspettando. Non ti trovavo da nessuna parte! Dove eri finita?",
-      "Gioia_whatweare002": "Ehi, non vai mai altrove? Mi stavo occupando di robe personali. Tutti lo fanno!",
+      "Gioia_whatweare002": "Ehi, ma tu non ti allontani mai da qui? Mi stavo occupando di robe personali. Tutti lo fanno!",
       "Mario_whatweare023": "Certo. Ed è proprio per questo che sono qui. Sono qui per occuparmi di qualcosa di personale.",
       "Gioia_whatweare003": "N-non sono sicura di seguirti.",
       "Mario_whatweare024": "Vieni. Facciamo un giro. Ti va?",
@@ -803,7 +821,7 @@
       "Mario_anniversary012": "[i]Ma la sua privacy è l'unica cosa in cui mi ha chiesto di non ficcare il naso.[/i]",
       "Mario_anniversary013": "[i]Glielo devo. Sono spuntato così dal nulla, sono entrato a gamba tesa nella sua vita e le ho chiesto di cambiare i suoi piani e le sue abitudini.[/i]",
       "Mario_anniversary014": "[i]Ha la sua vita. E mi sta bene così.[/i]",
-      "Mario_anniversary015": "[i]E poi lei non è che controlli costantemente cosa combino quando non stiamo insieme. Anche io ho la mia vita. E a proposito, dovrei organizzare le cose per stanotte.[/i]",
+      "Mario_anniversary015": "[i]E poi lei non è che controlli costantemente cosa combino quando non stiamo insieme. Anche io ho la mia vita. E, a proposito, dovrei organizzare le cose per stanotte.[/i]",
       "Mario_anniversary016": "[i]Farei meglio a stirare il mio completo, darmi una rasata, recuperare dei fiori... Speriamo di fare a tempo a fare tutto prima di cena![/i]",
       "System_015": "Qualche ora più tardi...",
       "Mario_anniversary017": "[i]Tutto bello e pulito! È ora di andare a recuperare la mia bella![/i]",
@@ -866,7 +884,7 @@
       "Gioia_marry002": "D-Diamine... Questo non me lo aspettavo...",
       "Mario_marry003": "Andiamo, sapevi che prima o poi ci sarei arrivato... Che senso ha? Io che sto da me, tu che stai da te...",
       "Mario_marry004": "Non cambierebbe nulla, ma potrei averti intorno mentre fai le tue cose quando non sei in giro...",
-      "Gioia_marry003": "Credo di aver paura di impegnarmi. Sono venuta qui per essere libera, per essere me stessa e lontano da tutto e tutti...",
+      "Gioia_marry003": "Credo di aver paura di impegnarmi. Sono venuta qui per essere libera, per essere me stessa e lontana da tutto e tutti...",
       "Mario_marry005": "Sarà divertente! Avevi paura anche un anno fa, e non c'è niente di male! Ma pensa a tutte le cose che potremmo fare assieme! Potremmo essere ancora più vicini! Cucinare assieme, svegliarci nello stesso letto, potrei vederti mentre sbrocchi con i videogiochi...",
       "Gioia_marry004": "Ma queste cose le possiamo già fare...",
       "Mario_marry006": "È vero, ma dobbiamo sempre organizzare, darci appuntamento, decidere se da me o da te...",
@@ -885,7 +903,7 @@
       "Mario_marry014": "Bene. Ci vediamo lì.",
       "Gioia_marry009": "'Notte, tesoro...",
       "Mario_marry015": "'Notte, amore...",
-      "Mario_moving001": "[i]Dannazione, ho bevuto fino ad addormentarmi, ieri notte. Non mi ero mai proposto a nessuna prima d'ora, e di certo non mi aspettavo una reazione del genere. [/i]",
+      "Mario_moving001": "[i]Dannazione, ho bevuto fino ad addormentarmi, ieri notte. Non mi ero mai proposto a nessuna, prima d'ora, e di certo non mi aspettavo una reazione del genere. [/i]",
       "Mario_moving002": "[i]La sorprenderò così tanto che non potrà rifiutarmi.[/i]",
       "Mario_moving003": "[i]Inventiamoci qualcosa.[/i]",
       "Mario_moving_bar": "[i]Mhmm. Grazie, ma anche no. Se vedo un'altra bottiglia finisco per vomitare...[/i]",
@@ -1028,6 +1046,7 @@
       "Gioia_bday_002": "Ehi... Grazie per questa festa. Il giardino è stupendo.",
       "Mario_bday_010": "Mi dispiace per ieri, davvero. Ce l'hai ancora con me?",
       "Gioia_bday_003": "È tutto OK. Solo che- oh! Ma ciao, tu! E tu chi sei?",
+      "npc_bday_cat": "MIAO!",
       "Mario_bday_011": "Oh, ecco, quello è il tuo regalo... So che volevi un cane, ma ecco... Questo pesa di meno ed è più performante, no?",
       "Gioia_bday_004": "Ma ciao bellezza! Che cariiino!",
       "npc_bday_004": "Allora! Quanti sono quest'anno? Stai invecchiando, eh?",
@@ -1037,7 +1056,7 @@
       "Gioia_bday_006": "Soprattutto oggi, soprattutto in questo momento.",
       "Gioia_bday_007": "Non credevo che sarei mai giunta a questo punto, ma ormai ho deciso.",
       "Gioia_bday_008": "Ed è per questo che è così importante che ci siate tutti. Non ero sicura di voler partecipare a questa festa, ma è un'occasione perfetta per dire quello che devo dire.",
-      "Gioia_bday_009": "Siete tutti stati parte della mia vista in questi tre anni, mese più o mese meno. Abbiamo imparato a conoscerci e siamo diventati amici.",
+      "Gioia_bday_009": "Siete tutti stati parte della mia vita in questi tre anni, mese più o mese meno. Abbiamo imparato a conoscerci e siamo diventati amici.",
       "Gioia_bday_010": "Mi avete accolta quando stavo passando un periodo difficile, mi avete fatto ridere, mi avete fatto crescere.",
       "Gioia_bday_011": "Ed ecco perché ci tengo a ringraziarvi tutti. Mi costa tanto, ma ho bisogno di prendere il volo, adesso. Questa vita non mi appartiene più.",
       "Gioia_bday_012": "Sono sicura che avremo l'occasione di rivederci altrove. Molti di voi sanno dove trovarmi. Sarò più che felice di rivedervi, davvero.",
@@ -1045,10 +1064,27 @@
       "Gioia_bday_014": "Ma, per adesso, devo dirvi addio. Spero che possiate capire la mia decisione e rispettarla.",
       "Gioia_bday_015": "Sapete anche quanto io detesti i lunghi addii, ed è per questo che ora taglierò corto e vi saluterò, non cambierò idea. Statemi tutti bene, conserverò sempre un bellissimo ricordo di questo posto e del tempo speso con voi.",
       "Mario_bday_012": "Asp-cosa?! Mael, aspetta! Che cosa st-",
-      "Gioia_bday_016": "Grazie a tutti, ragazzi, ci si vede in giro, non sparite!",
+      "Gioia_bday_016": "Grazie a tutti, ragazzi, ci si vede in giro, fatevi vivi di tanto in tanto!",
       "Mario_bday_013": "Mael, no, aspetta! Rimani! Non andare!",
       "Mario_bday_014": "No, Mael, no!",
-      "System_027": "[color=red]L'utente: Mael si è disconnesso.[/color]"
+      "System_027": "[color=red]L'utente: Mael si è disconnesso.[/color]",
+      "Mario_night001": "[i]È tempo di pianificare la prossima mossa. Devo lasciarla senza parole. Dove dovrei portarla stanotte?[/i]",
+      "Mario_night_townhall": "[i]Certo, è un bel giardino, ma non penso che sia il posto più sicuro dei dintorni...[/i]",
+      "Mario_night_houseforsale": "[i]Oh sì, sarebbe un'idea fantastica. Ma non posso essere sicuro che non ci siano telecamere di sorveglianza... Troppo rischioso.[/i]",
+      "Mario_night_bar": "[i]Di nuovo? Cosa potrebbe mai sorprenderla portandola qui? Conosce già questo posto.[/i]",
+      "Mario_night_restaurant": "[i]Non voglio rischiare di nuovo. Voglio organizzare qualcosa di così speciale che se anche dovesse ricevere un'altra telefonata non vorrà rispondere.[/i]",
+      "Mario_night_centralsquare": "[i]Non è un po' troppo... In bella vista?[/i]",
+      "Mario_night_woods": "[i]Oh, andiamo. Penserà che io sia un maniaco![/i]",
+      "Mario_night_park": "[i]Ora sì che ci siamo! La porterò qui. È un posto perfetto per vedere le stelle. E sono sicuro che non ci saranno nuvole, stasera. Eheh.[/i]",
+      "Mario_night002": "[i]E ora, ho tutto il tempo di sistemare tutto per bene. Non lascerò nulla al caso.[/i]",
+      "Mario_night003": "Ti stavo aspettando. Dove sei stata?",
+      "Gioia_night001": "Oh, sai... Le solite cose. Roba noiosa. Non vale la pena neanche parlarne. Non sprechiamo tempo, cosa ti va di fare?",
+      "Mario_night004": "Hai portato un giacchetto? Brividi assicurati!",
+      "Mario_night005": "Sto scherzando, non ti preoccupare. Non è lontano da qui. Andiamo.",
+      "Mario_other_building": "[i]Ehi, non erano questi i piani![/i]",
+      "Mario_hurry": "[i]Meglio affrettarsi, o si infastidirà.[/i]",
+      "Mario_night006": "Eccoci qui!",
+      "Gioia_night002": "Aspetta, cosa? Il parco?"
     }
   }
 }
