Update language resource

--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -67,7 +67,7 @@
       "Gioia_first_date007": "Isn't it what we all need?",
       "Mario_first_date011": "So here we are. This is my humble house. Yeah, don't laugh, I wish I could find something better, instead I had to go for these terrible roof tiles...",
       "Gioia_first_date008": "No way! I like that color! It's one of my favorites! I like it! Are you here all by yourself?",
-      "Mario_first_date012": "Yeah. You know... Rough period... That''s why I decided to get here.",
+      "Mario_first_date012": "Yeah. You know... Rough period... That's why I decided to get here.",
       "Gioia_first_date009": "Oh, I am sorry to hear... I am sure you'll like it here, you'll see!",
       "Mario_first_date013": "Yeah, I was wondering... You've been here for a while, isn't it? Maybe you can suggest me so-",
       "Gioia_first_date010": "Sure! Of course! Listen, I have to go for a while, why don't we meet later at the bar? It has a nice vibe, the music is amazing and you can tell me something more about you... I'll be back in... let's say... A couple of hours? Deal?",
@@ -121,7 +121,7 @@
       "System_007": "The next morning",
       "Mario_bar008": "...and that's when the quokka threw at me one of his babies, which are called joeys, to flee for her life...",
       "Mario_bar009": "Oh my god it is so late! I kept you up all night! Does this bar ever close?",
-      "Gioia_bar014_1": "Not that I know of... Every time I pass by it is open. Damn, you did so many things in your life! I want to know more, you're so interesting! Why don't we go out for dinner next time?",
+      "Gioia_bar014_1": "Not that I know of... Every time I pass by it is open. Damn, you did so many things in your life! I want to know more, you're so interesting! Why don't we have dinner together next time?",
       "Mario_bar010": "Hey, you sure don't have time to loose... Sure, whenever you want.",
       "Gioia_bar015": "Great. There's a nice restaurant not far from my place.",
       "Gioia_bar015_1": "I won't be around in the next couple of days. Show up to my place in three days, around 6PM and I'll walk you there.",
@@ -146,7 +146,7 @@
       "Mario_far": "[i]Have I forgotten where her place is?[/i]",
       "Mario_delay1": "[i]I don't want her to be waiting for me. [/i]",
       "Mario_dinner011_1": "[i]I knew that. She won't come. I shouldn't have come.[/i]",
-      "Gioia_dinner001": "Why hello! I though you had forgotten! I'll be right there, it's almost dinner time!",
+      "Gioia_dinner001": "Why hello! I thought you had forgotten! I'll be right there, it's almost dinner time!",
       "Gioia_dinner002": "Have you decided what you will eat?",
       "Mario_dinner012": "Yeah, lately I have been craving for some risotto. Tonight will be the night.",
       "Gioia_dinner003": "Great choice! I am ready, let's move!",
@@ -196,7 +196,7 @@
       "Gioia_night012": "I wish we could.",
       "Mario_whatweare001": "[i]And good morning to me. Damn, I've wasted almost the whole day. Not like I've been getting much sleep, lately. [/i]",
       "Mario_whatweare002": "[i]OK, it looks obvious that if I wasn't sure whether to stay or not, I now have my answer.[/i]",
-      "Mario_whatweare003": "[i]Tonight I felt more alive than I ever felt in the last year. [/i]",
+      "Mario_whatweare003": "[i]Last night I felt more alive than I ever felt in the last year. [/i]",
       "Mario_whatweare004": "[i]I am sure she feels the same way as well.[/i]",
       "Mario_whatweare005": "[i]And I am so dumb I didn't even tell her.[/i]",
       "Mario_whatweare006": "[i]I'll make my move. It is my chance. [/i]",
@@ -358,7 +358,7 @@
       "Gioia_marry008": "Yeah. Not before 6PM. I won't make it home before that time.",
       "Mario_marry014": "Cool. Meet you there.",
       "Gioia_marry009": "'Night, hun...",
-      "Mario_marry015": "'Night sweetheart...",
+      "Mario_marry015": "'Night, sweetheart...",
       "Mario_moving001": "[i]Damn, I drank myself to sleep last night. I never proposed before in my whole life. I was not expecting such a weird reaction.[/i]",
       "Mario_moving002": "[i]I will surprise her so much she won't be able to refuse me.[/i]",
       "Mario_moving003": "[i]Let's get creative.[/i]",
@@ -369,14 +369,14 @@
       "Mario_moving_park": "[i]I told her to meet me in the park, but not that early. I'll be bored to death by the time she'll meet me![/i]",
       "Mario_moving_dogpound": "[i]I am so sure she'd be the happiest person here if I brought her a dog, but I don't want to put all the responsibility on her shoulders, not until we can both share it.[/i]",
       "Mario_moving_houseforsale": "[i]This is exactly what I need. She's been dreaming of this since a long time. She won't be able to refuse me![/i]",
-      "Mario_moving_houseforsale1": "[i]Let's see if there is any useful information on the sign[/i]",
+      "Mario_moving_houseforsale1": "[i]Let's see if there is any useful information on the sign.[/i]",
       "System_016": "[b]Get in touch with the owner[/b]",
       "Mario_moving004": "[i]OK. There's a QR code. I need to fill in the form and then he'll contact me. Let's get this thing done![/i]",
       "Mario_moving005": "[i]And now let's wait. I'll go get a shower.[/i]",
       "System_017": "Message received.",
       "System_018": "Check messages",
       "System_019": "1 New message",
-      "System_20": "The house is available. If interested, please send a deposit to this prepaid account prior to filling in the attached documents: verealestate@payple.com",
+      "System_20": "The house is available. If interested, please fill in the attached documents prior to send the deposit to this prepaid account: verealestate@payple.com",
       "Mario_moving006": "[i]Got it![/i]",
       "Mario_moving007": "[i]And now let's spend some of the money I've been earning with all those silly online activities and have been sitting there forever...[/i]",
       "System_21": "Authorizing transaction...",
@@ -437,7 +437,7 @@
       "Gioia_dog007": "Come on, hun, you know I do it for us. I don't want to bring here my worries and my concerns about my work or, like in this case, about my family. This is our happy place, there is no need to discuss about what can be left outside...",
       "Gioia_dog008": "It's still my birthday, I have to find the time to celebrate with my relatives.",
       "Mario_dog006": "How is it even possible that your family is a concern? You hardly ever mention them! You never introduced me to them! Do they even know I exist? Have you ever told them we have something going on here? Can't they join the celebrations here?",
-      "Gioia_dog009": "Oh, come on, don't be silly! We already discussed about this. What I do with my private life is not their business. I want them to stay out of this. They wouldn't understand.",
+      "Gioia_dog009": "Oh, come on, don't be silly! We already discussed about this. What I do with my private life is none of their business. I want them to stay out of this. They wouldn't understand.",
       "Mario_dog007": "You are ashamed of this relationship, aren't you?",
       "Gioia_dog010": "Don't. Just don't. Not again. I had enough, I have things to take care of. I'll be back later.",
       "Mario_dog008": "[i]Sh#t![/i]",
@@ -526,8 +526,8 @@
       "System_027": "[color=red]User: Mael got disconnected.[/color]",
       "Mario_night001": "[i]So, time to plan my next move. I will impress her. Where should I take her tonight?[/i]",
       "Mario_night_townhall": "[i]Sure, this is a nice garden, but I don't think it's the safest place around...[/i]",
-      "Mario_night_houseforsale": "[i]Oh yeah, this would be a great idea. But I cannot be sure there are no surveillance cameras... Too risky[/i]",
-      "Mario_night_bar": "[i]Again? What is so impressive about this? She already know this place.[/i]",
+      "Mario_night_houseforsale": "[i]Oh yeah, this would be a great idea. But I cannot be sure there are no surveillance cameras... Too risky.[/i]",
+      "Mario_night_bar": "[i]Again? What is so impressive about this? She already knows this place.[/i]",
       "Mario_night_restaurant": "[i]I don't want to risk again. I want to set up something so amazing that even if she receives another phone call se won't be willing to take it![/i]",
       "Mario_night_centralsquare": "[i]Isn't this place a bit too much... in full sight?[/i]",
       "Mario_night_woods": "[i]Oh, come on, she'll think I am a maniac![/i]",
@@ -932,7 +932,7 @@
       "Gioia_moving002": "Beh, in realtà...",
       "Mario_moving012": "OK, OK, ne parleremo più tardi, davanti a una birra, che ne pensi? Ho qualcosa da mostrarti, prima!",
       "Gioia_moving003": "OK, di che si tratta? Sembri così eccitato!",
-      "Mario_moving013": "Lo sono! Non crederai ai miei occhi! Seguimi!",
+      "Mario_moving013": "Lo sono! Non crederai ai tuoi occhi! Seguimi!",
       "Mario_gioia_moving_bar": "Non ho organizzato tutto per venirmene al bar!",
       "Mario_gioia_moving_restaurant": "Non c'è tempo per questo! Possiamo festeggiare più tardi!",
       "Mario_gioia_moving_dogpound": "Davvero? Non è ch esto diventando ossessionato dai cani?",
@@ -985,7 +985,7 @@
       "Mario_dog007": "Ti vergogni della nostra relazione, non è così?",
       "Gioia_dog010": "No. Ti prego no. Non di nuovo. Ne ho abbastanza, devo occuparmi delle mie faccende. Tornerò più tardi.",
       "Mario_dog008": "[i]M#rda![/i]",
-      "Mario_dog009": "[i]Non lo sopporto.[/i]",
+      "Mario_dog009": "[i]Che fastidio.[/i]",
       "Mario_dog010": "[i]E ora è pure incazzata.[/i]",
       "Mario_dog011": "[i]E devo risolvere tutto questo prima della festa o mi addosserà la colpa.[/i]",
       "Mario_dog012": "[i]So io cosa le farà cambiare umore...[/i]",
