Improve townhall scene

--- a/src/locales/lang_resources.json
+++ b/src/locales/lang_resources.json
@@ -29,6 +29,7 @@
       "Mario_partynight_001": "[i]Wow. There's a lot of people.[/i]",
       "Mario_partynight_002": "[i]I feel so misplaced. What was I thinking? I hate dancing nights, why did I think this event could be any different from the others?[/i]",
       "Mario_partynight_003": "[i]I'll just stand aside for a while. Just for few minutes. Just to see what kind of people are around.[/i]",
+      "Mario_drink_alone": "[i]OK, I'll just stand by this punch bowl studying the locals...[/i]",
       "Gioia_partynight_001": "Hey! You're new around here, aren't you? I am Mael, nice to meet you!",
       "Mario_partynight_004": "Uhm, yeah, I mean, sure. I am new.",
       "Gioia_partynight_002": "Hello, New, nice to meet you! When did you arrive?",
@@ -573,6 +574,7 @@
       "Mario_partynight_001": "[i]Wow. C'è un bel po' di gente.[/i]",
       "Mario_partynight_002": "[i]Mi sento tremendamente fuori posto.\nCosa mi è venuto in mente?\nIo odio le serate danzanti. Perché mai questa sarebbe dovuta essere diversa?[/i]",
       "Mario_partynight_003": "[i]Resterò giusto per qualche minuto, in disparte. Giusto per vedere che tipo di gente c'è.[/i]",
+      "Mario_drink_alone": "[i]OK. Mi metterò qui accanto alla ciotola di punch e studierò i locali...[/i]",
       "Gioia_partynight_001": "Ehi! Sei nuovo da queste parti, non è vero?\nSono Mael, piacere di conoscerti!",
       "Mario_partynight_004": "Uh, sì, cioè, certo. Sono nuovo.",
       "Gioia_partynight_002": "Ciao, Nuovo, piacere di conoscerti! Quando sei arrivato?",
